SF Primes/src/objects/SubProject_Client_Contact__c.object
<CustomObject>
    <description>Junction Object to relate multiple Client Contacts to a SubProject</description>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SubProject Client Contacts</relationshipLabel>
        <relationshipName>SubProject_Client_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <formula>Client_Contact__r.Account_Name_Text__c</formula>
        <label>Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Client_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <formula>Client_Contact__r.MobilePhone</formula>
        <label>Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Client_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Project Role</label>
        <picklist>
            <picklistValues>
                <fullName>3rd Party Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Body Shop Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Operations Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRM Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Sponsor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F&amp;I Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI Forms Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fixed Operations Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front End Sales Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Laser Artwork Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payroll Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental Project Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Advocate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Administrator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training Advocate</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SubProject_Confidential__c</fullName>
        <formula>SubProject__r.Confidential__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubProject Confidential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SubProject__c</fullName>
        <label>SubProject</label>
        <referenceTo>SubProject__c</referenceTo>
        <relationshipLabel>SubProject Client Contacts</relationshipLabel>
        <relationshipName>SubProject_Client_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Client_Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <label>SubProject Client Contact</label>
    <nameField>
        <displayFormat>SPC-{000000000}</displayFormat>
        <label>SP-Client ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SubProject Client Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>